--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="game/main">Create</a></li>
-                            <li class="nav-item"><a class="nav-link" href="game/enter">Enter</a></li>
+                            <!--li th:if="${#authentication.principal.username !=null}" class="nav-item"><a class="nav-link" href="game/enter">Enter</a></li-->
                         </ul>
                     </div>
                 </div>
@@ -193,5 +193,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script th:inline="javascript">
+            const auth = [[${#authentication}]]
+            const errors = [[${errors}]]
+            console.log(errors)
+        </script>
     </body>
 </html>
