--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -43,36 +43,22 @@
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6">
-                        <form id="registerForm" action="/member/login" method="post">
+                        <form id="loginForm needs-validation" action="/member/login" method="post" novalidate>
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="id" name="username" type="text" data-sb-validations="required" />
+                                <input class="form-control" id="id" name="username" type="text" required />
                                 <label for="id">아이디</label>
-                                <div class="invalid-feedback" data-sb-feedback="id:required">아이디를 입력해주세요.</div>
+                                <div class="invalid-feedback">아이디를 입력해주세요.</div>
                             </div>
-                            <!-- Password number input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="mpw" name="password" type="password" data-sb-validations="required" />
+                                <input class="form-control" id="mpw" name="password" type="password" required />
                                 <label for="mpw">비밀번호</label>
-                                <div class="invalid-feedback" data-sb-feedback="mpw:required">비밀번호를 입력해주세요.</div>
+                                <div class="invalid-feedback">비밀번호를 입력해주세요.</div>
                             </div>
-
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
                             <div class="d-grid">
                                 <button class="btn btn-primary btn-lg" id="submitButton" type="submit">로그인</button>
-                                <button class="btn btn-warning btn-lg" onclick="location.href='/oauth2/authorization/kakao'">KAKAO 로그인</button>
+                                <button class="btn btn-warning btn-lg"><a href="/oauth2/authorization/kakao" style="text-decoration: none;color: white">KAKAO 로그인</a></button>
+
                             </div>
                         </form>
                     </div>
@@ -96,10 +82,31 @@
         </div>
     </div>
 </footer>
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script th:href="@{/js/script.js}"></script>
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
